objects/Cart_Items__c.object
<CustomObject>
    <fields>
        <fullName>Beer__c</fullName>
        <label>Beer</label>
        <referenceTo>Beer__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cart__c</fullName>
        <label>Cart</label>
        <referenceTo>Cart__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Amount__c</fullName>
        <label>Item Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Quantity__c</fullName>
        <label>Item Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cart Items</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Cart Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>